@@ -1,0 +1,33 @@
+Parameter is 0
+Constant function
+  offset = [1](0)
+  
+Evaluate: 
+[1](0)
+Gradient: 
+[1](0)
+Jacobian: 
+[1,1]((0))
+
+Parameter is 3.14
+Constant function
+  offset = [1](3.14)
+  
+Evaluate: 
+[1](3.14)
+Gradient: 
+[1](0)
+Jacobian: 
+[1,1]((0))
+
+Parameter is 42
+Constant function
+  offset = [1](42)
+  
+Evaluate: 
+[1](42)
+Gradient: 
+[1](0)
+Jacobian: 
+[1,1]((0))
+
